--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,9 @@
     <style name="Theme.Pokedex.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Pokedex.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    
+    <style name="SplashTheme" parent="Theme.Pokedex">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
+
 </resources>
