--- a/app/src/main/res/layout/fragment_bayas.xml
+++ b/app/src/main/res/layout/fragment_bayas.xml
@@ -4,12 +4,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".bayas.views.BayasFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="38dp">
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tab_pokemon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pokemon" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tab_favoritos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Favoritos" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tab_bayas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bayas" />
+    </com.google.android.material.tabs.TabLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/bayas_fragment" />
+
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
