--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -41,14 +41,14 @@
             app:layout_constraintStart_toEndOf="@+id/pokemon_image"
             app:layout_constraintTop_toBottomOf="@id/pokemon_number"/>
 
-        <Switch
-            android:id="@+id/favorites"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="106dp"
+            android:layout_height="29dp"
+            android:layout_marginEnd="16dp"
             android:text="Favorito"
-            app:layout_constraintBottom_toBottomOf="@+id/pokemon_number"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/pokemon_number" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
